fix influx